# pzip

./: .coveragerc  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  bench.py  index.html  mkdocs.yml  pyproject.toml  pzip.py  setup.py  tests.py
.github/workflows/: ci.yml  publish.yml
docs/: encryption.md  format.md  index.md
encryption/: index.html
format/: index.html
pzip/: __init__.py  base.py  cli.py  reader.py  writer.py
search/: search_index.json
src/pzip/: __init__.py  base.py  cli.py  reader.py  writer.py
tests/: test_pzip.py
