[project]
name = "pzip"
dynamic = ["version"]
description = "Crytographically secure file compression."
authors = [
    { name = "Dan Watson", email = "watsond@imsweb.com" }
]
dependencies = [
    "cryptography",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: System :: Archiving :: Compression",
]

[project.optional-dependencies]
deflate = ["deflate"]

[project.urls]
Homepage = "https://github.com/imsweb/pzip"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.21",
    "pre-commit~=3.5.0",
    "deflate>=0.7.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pzip"]

[tool.hatch.version]
path = "src/pzip/__init__.py"

[tool.ruff.lint]
extend-select = ["I"]
isort.known-first-party = ["pzip"]

[tool.pytest.ini_options]
addopts = "--cov=pzip"
